# xPU-simulatorB

./: README.md  SESSION_HISTORY_2026-04-09.md  deepseek_b1_s32_l0-1_ascend.html  deepseek_decode_b1_ctx128_t1_l0-1_ascend.html  deepseek_v32_compare_b1_s128.html  pyproject.toml
configs/calibration/: ascend_default.json  nvidia_default.json
configs/devices/: ascend_910b.json  nvidia_a100.json
scripts/: run_deepseek_examples.sh
src/xpu_simulator/: __init__.py
src/xpu_simulator/backends/: __init__.py
src/xpu_simulator/backends/ascend/: __init__.py  backend.py  config.py
src/xpu_simulator/backends/base/: __init__.py  backend.py  config_loader.py  types.py
src/xpu_simulator/backends/nvidia/: __init__.py  backend.py  config.py
src/xpu_simulator/calibration/: __init__.py  csv_ingest.py  loader.py  report.py
src/xpu_simulator/cli/: main.py
src/xpu_simulator/frontend/: __init__.py  backend_ir_frontend.py  deepseek.py  export_frontend.py  fx_frontend.py  source_analysis.py  transformer_source.py
src/xpu_simulator/graph_passes/: __init__.py  fusion.py  pipeline.py
src/xpu_simulator/ir/: __init__.py  graph.py  types.py
src/xpu_simulator/memory/: __init__.py  analysis.py
src/xpu_simulator/profiling/: __init__.py  trace_ingest.py
src/xpu_simulator/reporting/: __init__.py  breakdown.py  compare.py  graph_diff.py  html_report.py  summary.py
src/xpu_simulator/sim/: __init__.py  engine.py
tests/: test_simulator.py
